GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.19alpha29 : 
    
        - Added testsuite for generic PDL analyzer.
        
        - Typo fixed in PCLXL parser.
        
        - Correctly dispatches error messages depending on the
          situation : tools which can be run interactively will
          ALWAYS output their logs to stderr, excepted for
          their DEBUG messages, for which the "logger:"
          directive as set in pykota.conf will be honored.
          Tools which can't be run interactively will ALWAYS
          honor the "logger:" directive as set in pykota.conf
          
    - 1.19alpha28 :
    
        - The description field for printers can now be set,
          and is displayed in reports.
          
        - Fixed a small problem in SQL backend code.
          
        - Improved pkhint
        
        - First working PCL6 (aka PCLXL) parser !
          Doesn't handle copies yet.
        
    - 1.19alpha27 :
    
        - Additionnal 10% speed increase in PCL5 parser for GhostScript
          generated files (untested yet with other PCL files).
          
        - Reintroduced the use of mmap in PCL5 parser : this speedups
          PCL5 parsing by almost 4 times.
          This 4x with the 3x below give us in fact a twelvefold increase
          in performance for PCL5 parsing !
          
        - The Python accelerator Psyco is now used if available
          in the generic PDL parser : it speedups PCL5 parsing by
          almost three times automagically. 
          
    - 1.19alpha26 :
    
        - Fixed PCL5 parser according to the sources of rastertohp.
        
        - Fixed number of copies handling in PCL5 parser : the number