@@ -23,6 +23,9 @@ PyKota NEWS :
 
     - 1.19alpha29 : 
     
+        - PCLXL parser should now correctly handle number of
+          copies set for each page.
+          
         - Added testsuite for generic PDL analyzer.
         
         - Typo fixed in PCLXL parser.
